...
"CALL" = "CALL";

/*Contact driver sms option*/
"SMS" = "SMS";

/*Cancel alert option*/
"CANCEL" = "CANCEL";

/*Alert option*/
"NO" = "NO";

/*Alert option*/
"YES" = "YES";
...
/*SetPickupLocationView ETA*/
"<1\nMIN" = "<1\nMIN";
"%ld\nMIN" = "%ld\nMIN";

/*Menu Options*/
"Payment" = "Payment";
"Round Up" = "Round Up";
"Trip History / Support" = "Trip History / Support";
"Direct Connect" = "Direct Connect";
"Promotions" = "Promotions";
"Drive with %@" = "Drive with %@";
"Accessibility" = "Accessibility";
"Female Driver Mode" = "Female Driver Mode";
...

/*Accessibility labels SelectPlaceMapViewController*/
"Your place." = "Your place.";

/*Accessibility labels LocationVC*/
"show my location" = "show my location";
"show menu" = "show menu";
"Cancel your request" = "Cancel your request";
"Cancel trip" = "Cancel trip";
"Fare Split" = "Fare Split";
"See Fare Estimate" = "See Fare Estimate";
"Driver Info View" = "Driver Info View";
"You can see your payment history, round up, promotions or settings" = "You can see your payment history, round up, promotions or settings";
...
